# launch-mc

./: README.md  pyproject.toml  windows_setup.py
src/: windows_setup.py
src/minecraft_launcher/: launcher.py
windows/template/: mc-1.19.4.bat
